# ray-tracer

./: .gitignore  CMakeLists.txt  README.md
examples/: mandelbrot.json
ray-tracer/: CMakeLists.txt  color.h  cubemap.h  floor.h  image.cpp  image.h  object.h  ray-tracer.cpp  ray-tracer.h  sphere.h
ray-tracer/materials/: dielectric.h  lambertian.h  material.h  metal.h
ray-tracer/util/: random_utils.cpp  vec2.h  vec3.h
src/: CMakeLists.txt  ray-tracer.cpp  ray-tracer.h  sphere.h
src/lib/: CMakeLists.txt  camera.cpp  camera.h  cubemap.h  image.cpp  image.h  scene.h  sphere.h
src/lib/materials/: cubemap.cpp  cubemap.h  dielectric.cpp  dielectric.h  lambertian.cpp  lambertian.h  lambertian_texture.cpp  lambertian_texture.h  material.cpp  material.h  metal.cpp  metal.h
src/lib/shapes/: floor.cpp  floor.h  object.h  sphere.cpp  sphere.h
src/lib/util/: complex.h  random_utils.cpp  random_utils.h  terminal.cpp  terminal.h  vec3.h
src/materials/: dielectric.h  lambertian_texture.h  material.h  metal.h
src/program/: CMakeLists.txt  mandelbrot.cpp  ray-tracer.cpp
src/util/: vec3.h
test/: CMakeLists.txt  json.cpp  tests.cpp  util.cpp
